--- a/.github/nuget.yml
+++ b/.github/nuget.yml
@@ -1,31 +1,44 @@
-name: "Deploy to Nuget"
-on:
+name: Deploy to Nuget
+'on':
   push:
     tags:
-      - "v*"
+      - v*
 env:
-  PROJECT_PATH: 'src/Core/Core.csproj'
+  PROJECT_PATH: src/Core/Core.csproj
   PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output'
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 jobs:
   deploy:
-    name: 'Deploy'
-    runs-on: 'windows-latest'
+    name: Deploy
+    runs-on: windows-latest
     steps:
-    - name: 'Checkout'
-      uses: actions/checkout@v2
-    - name: 'Install dotnet'
-      uses: actions/setup-dotnet@v3 
-      with:
-        dotnet-version: '8.0.x'
-    - name: 'Restore Packages'
-      run: dotnet restore ${{ env.PROJECT_PATH }}
-    - name: 'Build Project'
-      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
-    - name: 'Pack Project'
-      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build  --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
-    - name: 'Get Version'
-      id: version
-      uses: battila7/get-version-action@v2
-    - name: 'Push Package'
-      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{ secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install dotnet
+        uses: actions/setup-dotnet@v1  
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Restore Packages
+        run: 'dotnet restore ${{ env.PROJECT_PATH }}'
+
+      - name: Build Project
+        run: 
+          dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration
+          Release
+
+      - name: Pack Project
+        run: 
+          dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build
+          --configuration Release --include-symbols --output ${{
+          env.PACKAGE_OUTPUT_DIRECTORY }}
+
+      - name: Get Version
+        id: version
+        uses: battila7/get-version-action@v2
+
+      - name: Push Package
+        run: 
+          dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{
+          secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
