--- a/.github/nuget.yml
+++ b/.github/nuget.yml
@@ -24,12 +24,12 @@ jobs:
       run: 'dotnet restore ${{ env.PROJECT_PATH }}'
 
     - name: Build Project
-      run: 
+      run: >-
         dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration
         Release
 
     - name: Pack Project
-      run: 
+      run: >-
         dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build
         --configuration Release --include-symbols --output ${{
         env.PACKAGE_OUTPUT_DIRECTORY }}
@@ -39,6 +39,6 @@ jobs:
       uses: battila7/get-version-action@v2
 
     - name: Push Package
-      run: 
+      run: >-
         dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{
         secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
