--- a/.github/nuget.yml
+++ b/.github/nuget.yml
@@ -24,21 +24,14 @@ jobs:
       run: 'dotnet restore ${{ env.PROJECT_PATH }}'
 
     - name: Build Project
-      run: >-
-        dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration
-        Release
+      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
 
     - name: Pack Project
-      run: >-
-        dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build
-        --configuration Release --include-symbols --output ${{
-        env.PACKAGE_OUTPUT_DIRECTORY }}
+      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build  --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
 
     - name: Get Version
       id: version
       uses: battila7/get-version-action@v2
 
     - name: Push Package
-      run: >-
-        dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{
-        secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
+      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{ secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
