--- a/.github/nuget.yml
+++ b/.github/nuget.yml
@@ -1,37 +1,37 @@
-name: Deploy to Nuget
-'on':
+name: "Deploy to Nuget"
+on:
   push:
     tags:
-      - v*
+      - "v*"
 env:
   PROJECT_PATH: src/Core/Core.csproj
   PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output'
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 jobs:
   deploy:
-    name: Deploy
-    runs-on: windows-latest
+    name: 'Deploy'
+    runs-on: 'windows-latest'
     steps:
-    - name: Checkout
+    - name: 'Checkout'
       uses: actions/checkout@v2
 
-    - name: Install dotnet
+    - name: 'Install dotnet'
       uses: actions/setup-dotnet@v1  
       with:
         dotnet-version: 8.0.x
 
-    - name: Restore Packages
-      run: 'dotnet restore ${{ env.PROJECT_PATH }}'
+    - name: 'Restore Packages'
+      run: dotnet restore ${{ env.PROJECT_PATH }}
 
-    - name: Build Project
+    - name: 'Build Project'
       run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
 
-    - name: Pack Project
+    - name: 'Pack Project'
       run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build  --configuration Release --include-symbols --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
 
-    - name: Get Version
+    - name: 'Get Version'
       id: version
       uses: battila7/get-version-action@v2
 
-    - name: Push Package
+    - name: 'Push Package'
       run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{ secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
