--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -5,7 +5,7 @@ on:
       - "v*"
 env:
   PROJECT_PATH: 'src/Core/Core.csproj'
-  PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output'
+  PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output\'
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 jobs:
   deploy:
