--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -4,7 +4,24 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageId>Pkg.MongoDb.Core</PackageId>
+    <Title>Pkg.MongoDb.Core</Title>
+    <Authors>Alison-Cruz</Authors>
+    <Product>Pkg.Mongo.Db</Product>
+    <Description>This package have is able to simplify mongodb driver, using repository patter to do this.</Description>
+    <PackageProjectUrl>https://github.com/Alison-Cruz/pkg.mongodb</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Alison-Cruz/pkg.mongodb</RepositoryUrl>
+    <PackageIcon>mongodb+original-1324760553088442944.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Bson" Version="2.22.0" />
