--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -11,12 +11,16 @@
     <Description>This package have is able to simplify mongodb driver, using repository patter to do this.</Description>
     <PackageProjectUrl>https://github.com/Alison-Cruz/pkg.mongodb</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Alison-Cruz/pkg.mongodb</RepositoryUrl>
-    <PackageIcon>mongodb+original-1324760553088442944.png</PackageIcon>
+    <PackageIcon>package-img.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\.img\package-img.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
