--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -5,7 +5,7 @@ on:
       - "v*"
 env:
   PROJECT_PATH: 'src/Core/Core.csproj'
-  PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output'
+  PACKAGE_OUTPUT_DIRECTORY: '${{ github.workspace }}\output\'
   NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 jobs:
   deploy:
@@ -28,4 +28,4 @@ jobs:
     - name: 'Pack Project'
       run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build  --configuration Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
     - name: 'Push Package'
-      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{ secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}}
+      run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}*.nupkg -k ${{ secrets.NUGET_KEY }} -s ${{ env. NUGET_SOURCE_URL}} --skip-duplicate
